[package]
name = "rustmap"
version = "0.1.0"
authors = ["David Sommerich <d.j.s.1050@gmail.com>"]
edition = "2018"
description = "A very simple \"Nmap-like\" program that can scan for hosts and open TCP ports."
readme = "README.md"
homepage = "https://github.com/sommd/rustmap#readme"
repository = "https://github.com/sommd/rustmap"
license = "Apache-2.0"
keyworks = ["nmap", "networking", "scan"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
libc = "0.2.68"
parse_duration = "2.1.0"
socket2 = "0.3.12"
structopt = "0.3.12"
